Remove about page, fix overflowing code in posts

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -72,7 +72,7 @@
   margin: 0 auto;
   position: relative;
   @media screen and (min-width: 45.625em) {
-    padding: 1.3em 1.65em 2em;
+    padding: 1.3em 1.65em 1.6em;
   }
   .pride {
     border-radius: 2px;
