--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -126,6 +126,7 @@
       background: #f1f2f3;
       padding: 0.1em 0.5em 0.2em;
       border-radius: 0.2em;
+      word-wrap: break-word;
       @media screen and (min-width: 37.5em) {
         font-size: 1.1rem;
       }
